-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2.4
-
None
-
Windows 10
-
-
a3a07dd16d (qt/qtbase/dev) a3a07dd16d (qt/tqtc-qtbase/dev) 89a3940602 (qt/qtbase/6.3) 89a3940602 (qt/tqtc-qtbase/6.3)
I see a warning "Unable to open default EUDC font: "EUDC.TTE"" in users logs on Windows 10.
It's not reproduced for me locally, so I have no idea what is a reason for this.
Stack trace from logs:
0# QWindowsFontDatabase::addDefaultEUDCFont in Qt6Gui 1# QWindowsFontDatabase::populateFontDatabase in Qt6Gui 2# QFontDatabase::hasFamily in Qt6Gui 3# QtFontFamily::ensurePopulated in Qt6Gui 4# QFontDatabase::smoothSizes in Qt6Gui 5# QFont::defaultFamily in Qt6Gui 6# WebEngineError::toQtErrorDomain in Qt6WebEngineCore 7# WebEngineError::toQtErrorDomain in Qt6WebEngineCore 8# QWebEngineSettings::QWebEngineSettings in Qt6WebEngineCore 9# QQuickWebEngineSettings::QQuickWebEngineSettings in Qt6WebEngineQuick 10# QQuickWebEngineProfile::QQuickWebEngineProfile in Qt6WebEngineQuick 11# QQuickWebEngineProfile::defaultProfile in Qt6WebEngineQuick ...
- relates to
-
QTBUG-44594 Glyph in Private Use Areas(EUDC) are not shown
-
- Closed
-